--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: hello-app
         # Replace $GCLOUD_PROJECT with your project ID
-        image: gcr.io/$GCLOUD_PROJECT/php:latest
+        image: gcr.io/robotic-tract-296012/php:latest
         # This app listens on port 8080 for web traffic by default.
         ports:
         - containerPort: 8080
