--- a/k8s/production/Deployment.yaml
+++ b/k8s/production/Deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: hello
+        env: production
     spec:
       containers:
       - name: hello-app
