--- a/k8s/canary/Deployment.yaml
+++ b/k8s/canary/Deployment.yaml
@@ -12,6 +12,7 @@ spec:
     metadata:
       labels:
         app: hello
+        env: canary
     spec:
       containers:
       - name: hello-app
